--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .background-overlay {
-  background-image: url("/background.webp");
+  background-image: url("/src/assets/background.webp");
   background-size: cover;
   background-position: center;
   opacity: 0.2;
