--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -18,48 +18,19 @@
   z-index: 0;
 }
 
-.content {
-  position: relative;
-  z-index: 1;
-  text-align: center;
-  padding-top: 30vh;
-  color: white;
-  font-family: sans-serif;
-  text-shadow: 1px 1px 5px black;
-}
 
 .noteTile-container {
   width: 100%;
   height: 100%;
   max-height: 250px;
   max-width: 300px;
-  margin: 20px;
-  background-color: #fff;
   border-radius: 12px;
-  box-shadow: 4px 3px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: -1px -1px 10px rgba(0, 0, 0, 0.12);
   padding: 15px;
   display: flex;
   flex-direction: column;
+  transition: transform 0.2s ease-out, box-shadow 0.3s ease-out;
   gap: 10px;
-}
-
-.noteCard-title {
-  text-align: left;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 1.1rem;
-  font-weight: 600;
-  margin-bottom: 0px;
-}
-
-.noteCard-divider {
-  margin-top: 0px;
-  border-bottom: 0.5px solid #e0e0e0;
-}
-
-.noteCard-content {
-  text-align: left;
-  font-size: 0.85rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .noteCard-footer {
@@ -68,23 +39,4 @@
   justify-content: space-between;
 }
 
-.category-tag {
-  font-size: 0.8rem;
-  background-color: #d1fae5;
-  color: #047857;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding: 0.2em 0.5em;
-  border-radius: 999px;
-  transition: background 0.4s;
-}
 
-.category-tag:hover {
-  background-color: hsla(118, 95%, 76%, 0.89);
-}
-
-.card-date {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: #666666;
-  font-size: 0.85rem;
-  font-weight: lighter;
-}
