--- a/react-app/src/components/richTextEditor.css
+++ b/react-app/src/components/richTextEditor.css
@@ -2,41 +2,37 @@
 .note-editor-container {
   width: 100%;
   max-width: 98vw;
-  margin: 10px;
-  min-height: 90vh;
-  max-height: 90vh;
-  background-color: #e0fffa;
-  border-radius: 12px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s ease-in-out;
+  margin: 10px 10px 10px 0px;
+  min-height: 95vh;
+  max-height: 95vh;
   overflow: hidden;
 }
 
-.note-editor-container:hover {
-  transform: translateY(-3px);
+.quill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 /* (ql-toolbar) */
 .ql-toolbar.ql-snow {
-  width: 40%;
   margin-bottom: -1.5rem;
-  margin-left: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 10px;
-  background-color: #f5f5f5;
+  background-color: #F7F8FF;
   position: relative;
   z-index: 10;
 }
 
-.ql-container.ql-snow  {
+.ql-container.ql-snow {
   border-radius: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   height: 100%;
-  min-height: 80vh;
+  min-width: 95%;
+  min-height: 85vh;
   line-height: 1.6;
   font-size: 1.05em;
   color: #333;
