--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -22,6 +22,7 @@
 .noteTile-container {
   width: 100%;
   height: 100%;
+  min-height: 150px;
   max-height: 250px;
   max-width: 300px;
   border-radius: 12px;
