--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -18,7 +18,6 @@
   z-index: 0;
 }
 
-
 .noteTile-container {
   width: 100%;
   height: 100%;
@@ -40,4 +39,8 @@
   justify-content: space-between;
 }
 
-
+.animate-shimmer {
+  animation: shimmer 1.5s infinite linear;
+  background: linear-gradient(to right, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+  background-size: 800px 100px;
+}
