--- a/react-app/src/utils/richTextEditor.css
+++ b/react-app/src/utils/richTextEditor.css
@@ -32,13 +32,13 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   height: 100%;
   min-width: 95%;
-  min-height: 85vh;
+  min-height: 78vh;
   line-height: 1.6;
   font-size: 1.05em;
   color: #333;
   background-color: #f9fafb;
   box-sizing: content-box;
-  padding: 30px 25px;
+  padding: 85px 25px 30px 25px;
   margin: 0px 15px;
 }
 
