--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -58,3 +58,23 @@
   background: linear-gradient(to right, #ececec 8%, #f5f5f5 18%, #ececec 33%);
   background-size: 800px 100px;
 }
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateX(180deg);
+  }
+}
+
+.animate-loading {
+  animation: loading 2s infinite;
+}
+
+.animate-loading-reverse {
+  animation: loading 2s infinite reverse;
+}
