--- a/react-app/src/utils/richTextEditor.css
+++ b/react-app/src/utils/richTextEditor.css
@@ -3,9 +3,28 @@
   width: 100%;
   max-width: 98vw;
   margin: 10px 10px 10px 0px;
-  min-height: 95vh;
-  max-height: 95vh;
+  min-height: 90vh;
+  max-height: 90vh;
+  /* max-height: 95vh;
+  min-height: 95vh; */
   overflow: hidden;
+}
+
+.ql-container.ql-snow {
+  border: none;
+  border-radius: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  min-width: 95%;
+  min-height: 75vh;
+  /* min-height: 80vh; */
+  line-height: 1.6;
+  font-size: 1.05em;
+  color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.08);
+  box-sizing: content-box;
+  padding: 85px 25px 30px 25px;
+  margin: 0px 15px;
 }
 
 .quill {
@@ -136,21 +155,6 @@
   color: white;
 }
 
-.ql-container.ql-snow {
-  border: none;
-  border-radius: 20px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  height: 100%;
-  min-width: 95%;
-  min-height: 78vh;
-  line-height: 1.6;
-  font-size: 1.05em;
-  color: rgba(255, 255, 255, 0.9);
-  background-color: rgba(255, 255, 255, 0.08);
-  box-sizing: content-box;
-  padding: 85px 25px 30px 25px;
-  margin: 0px 15px;
-}
 
 .ql-editor::before {
   margin: 0px 25px;
